<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.0.13</version>
	</parent>
  	<groupId>TestOptimal</groupId>
  	<artifactId>MBT</artifactId>
  	<version>7.0.3</version>
  	<packaging>jar</packaging>

  	<name>TestOptimal</name>
  	<url>http://maven.apache.org</url>
  	
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-dependencies</artifactId>
				<version>3.0.13</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-tomcat</artifactId>
			<scope>provided</scope>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
		<dependency>
		    <groupId>org.apache.commons</groupId>
		    <artifactId>commons-lang3</artifactId>
		</dependency>
		
		<!-- https://mvnrepository.com/artifact/commons-codec/commons-codec -->
		<dependency>
		    <groupId>commons-codec</groupId>
		    <artifactId>commons-codec</artifactId>
		</dependency>
				
		<!-- spring security -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-security</artifactId>
        </dependency>
		
		<dependency>
	      <groupId>com.google.code.gson</groupId>
	      <artifactId>gson</artifactId>
	      <scope>compile</scope>
	    </dependency>
	    
	    <dependency>
	      <groupId>org.springdoc</groupId>
	      <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
	      <version>2.2.0</version>
	    </dependency>
   
   
		<!-- https://mvnrepository.com/artifact/io.rest-assured/rest-assured, need to be before lambdaj due to hamcrest conflict-->
		<dependency>
			<groupId>io.rest-assured</groupId>
			<artifactId>rest-assured</artifactId>
		</dependency>
		
	    <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
		<dependency>
		    <groupId>org.seleniumhq.selenium</groupId>
		    <artifactId>selenium-java</artifactId>
		</dependency>
		<dependency>
		    <groupId>org.seleniumhq.selenium</groupId>
		    <artifactId>htmlunit3-driver</artifactId>
		    <version>4.15.1</version>
		</dependency>	    

		<!-- https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager -->
		<dependency>
		    <groupId>io.github.bonigarcia</groupId>
		    <artifactId>webdrivermanager</artifactId>
		    <version>5.6.2</version>
		</dependency>
        <dependency>
            <groupId>org.apache.httpcomponents.client5</groupId>
            <artifactId>httpclient5</artifactId>
             <version>5.2.3</version>
        </dependency>
        
	    <dependency>
		    <groupId>org.seleniumhq.selenium</groupId>
		    <artifactId>selenium-remote-driver</artifactId>
		</dependency>

		<dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-websocket</artifactId>
        </dependency>
        <dependency>
            <groupId>org.webjars</groupId>
            <artifactId>webjars-locator-core</artifactId>
        </dependency>
        
        <dependency>
            <groupId>org.webjars</groupId>
            <artifactId>sockjs-client</artifactId>
            <version>1.1.2</version>
        </dependency>
        <dependency>
            <groupId>org.webjars</groupId>
            <artifactId>stomp-websocket</artifactId>
            <version>2.3.3</version>
        </dependency>
        <dependency>
            <groupId>org.webjars</groupId>
            <artifactId>bootstrap</artifactId>
		    <version>4.5.3</version>
		</dependency>
		
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-configuration-processor</artifactId>
			<optional>true</optional>
		</dependency>
		
		<!-- https://mvnrepository.com/artifact/org.apache.groovy/groovy-all -->
		<dependency>
		    <groupId>org.apache.groovy</groupId>
		    <artifactId>groovy-all</artifactId>
		    <version>4.0.15</version>
		    <type>pom</type>
		</dependency>

		<!-- https://mvnrepository.com/artifact/net.sourceforge.plantuml/plantuml -->
		<dependency>
		    <groupId>net.sourceforge.plantuml</groupId>
		    <artifactId>plantuml</artifactId>
		    <version>1.2023.9</version>
		</dependency>
		
		<!-- https://mvnrepository.com/artifact/javax.mail/javax.mail-api -->
		<dependency>
		    <groupId>javax.mail</groupId>
		    <artifactId>javax.mail-api</artifactId>
		    <version>1.4.7</version>
		</dependency>
					
		<!-- https://mvnrepository.com/artifact/colt/colt -->
		<dependency>
		    <groupId>colt</groupId>
		    <artifactId>colt</artifactId>
		    <version>1.2.0</version>
		</dependency>
		
  		<dependency>
		    <groupId>com.github.testoptimal</groupId>
		    <artifactId>openOptima</artifactId>
		    <version>1.0.2</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.webjars/codemirror -->
		<dependency>
		    <groupId>org.webjars</groupId>
		    <artifactId>codemirror</artifactId>
		    <version>5.50.0</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.webjars/angularjs -->
		<dependency>
		    <groupId>org.webjars</groupId>
		    <artifactId>angularjs</artifactId>
		    <version>1.7.9</version>
		</dependency>
        
		<!-- https://mvnrepository.com/artifact/org.webjars/jquery -->
		<dependency>
		    <groupId>org.webjars</groupId>
		    <artifactId>jquery</artifactId>
		    <version>3.3.1</version>
		</dependency>
	</dependencies>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<java.version>17</java.version>
		<start-class>com.testoptimal.server.Application</start-class>
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>
		<timestamp>${maven.build.timestamp}</timestamp>
		<maven.build.timestamp.format>yyyy-MM-dd HH:mm</maven.build.timestamp.format>
		<to.version>${project.version}</to.version>
		<build.date>${timestamp}</build.date>
	</properties>
	
	<build>
		<plugins>
			<plugin>
			  <groupId>org.codehaus.mojo</groupId>
			  <artifactId>properties-maven-plugin</artifactId>
			  <version>1.0.0</version>
			  <executions>
			    <execution>
			      <id>one</id>
			      <phase>initialize</phase>
			      <goals>
			        <goal>write-project-properties</goal>
			      </goals>
			      <configuration>
			        <outputFile>src/main/resources/TO.properties</outputFile>
			      </configuration>
			    </execution>
			  </executions>
			</plugin>	
				
	       <plugin>
	            <groupId>org.apache.maven.plugins</groupId>
	            <artifactId>maven-compiler-plugin</artifactId>
	            <configuration>
	                <excludes>
	                    <exclude>**/com/testoptimal/license/LicenseManager.javax</exclude>
	                    <exclude>**/TOWebSite/</exclude>
	                </excludes>
	            </configuration>
	        </plugin>
		   	<plugin>
		        <artifactId>maven-antrun-plugin</artifactId>
		        <executions>
					<execution>
					    <id>deploy-win</id>
					    <phase>install</phase>
					    <goals>
					        <goal>run</goal>
					    </goals>
					    <configuration>
					        <target>
					        	<property name="releaseLabel" value="${project.version}"/>
								<property name="releaseBuildDir" value = "build" />
								<property name="productName" value="${project.groupId}_${project.artifactId}"/>
								
						  		<delete includeEmptyDirs="true" failonerror="false">
						  		  	<fileset dir="${releaseBuildDir}/TestOptimal_win/" includes="**"/>
						  		</delete>
								<mkdir dir="${releaseBuildDir}/TestOptimal_win/work/" />
							  	<copy todir="${releaseBuildDir}/TestOptimal_win/">
							    	<fileset dir="buildDef/shared/" includes="**/*"/>
							  	</copy>
							  	<copy todir="${releaseBuildDir}/TestOptimal_win/">
							    	<fileset dir="buildDef/TestOptimal_win/" includes="**/*"/>
							  	</copy>
							  	<copy file="target/${project.artifactId}-${releaseLabel}.jar" tofile="${releaseBuildDir}/TestOptimal_win/${productName}.jar"/>
							  	<zip destfile="${releaseBuildDir}/${productName}_${releaseLabel}_win.zip"
							       basedir="${releaseBuildDir}/TestOptimal_win"
							  	/>
							  	
						  		<delete includeEmptyDirs="true" failonerror="false">
						  		  	<fileset dir="${releaseBuildDir}/TestOptimal_mac/" includes="**"/>
						  		</delete>
								<mkdir dir="${releaseBuildDir}/TestOptimal_mac/work/" />
								<copy todir="${releaseBuildDir}/TestOptimal_mac/">
							    	<fileset dir="buildDef/shared/" includes="**/*"/>
							  	</copy>
							  	<copy todir="${releaseBuildDir}/TestOptimal_mac/">
							    	<fileset dir="buildDef/TestOptimal_mac/" includes="**/*"/>
							  	</copy>
							  	<copy file="target/${project.artifactId}-${releaseLabel}.jar" tofile="${releaseBuildDir}/TestOptimal_mac/${productName}.jar"/>
							  	<zip destfile="${releaseBuildDir}/${productName}_${releaseLabel}_mac.zip">
							  		 <zipfileset filemode="755" dir="${releaseBuildDir}/TestOptimal_mac" includes="**/*"/>
							  	</zip>
					        </target>
					    </configuration>
					</execution>
		        </executions>
		    </plugin>		
		    <!-- comment out following plugin to generate project jar only -->

			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
	            <configuration>
	                <mainClass>com.testoptimal.server.Application</mainClass>
	                <layout>ZIP</layout>
				    <addResources>true</addResources>
       				<includeSystemScope>true</includeSystemScope>
		            <executions>
		                <execution>
		                    <goals>
		                        <goal>repackage</goal>
		                    </goals>
		                </execution>
		            </executions>       				
       	        </configuration>
			</plugin>

	      <plugin>
		        <groupId>org.apache.maven.plugins</groupId>
		        <artifactId>maven-javadoc-plugin</artifactId>
			    <configuration>
			        <links>
			            <link>http://java.sun.com/j2se/1.5.0/docs/api/</link>
			        </links>
			        <show>public</show>
			        <doctitle>TestOptimal API</doctitle>
			        <title>TestOptimal API</title>
			        <bottom><![CDATA[Copyright TestOptimal, LLC]]></bottom>
			        <sourceFileIncludes>
						<include>exec/mscript/Exec.java</include>
					</sourceFileIncludes>
			        <sourcepath>${basedir}/src/main/java/com/testoptimal</sourcepath>
			        <classpath>${basedir}/src/main/java</classpath>
                    <configuration>
		                <additionalparam>-Xdoclint:none</additionalparam>
						<failOnError>false</failOnError>
		            </configuration>
			    </configuration>
			</plugin>
			

		</plugins>
	</build>
	
	<repositories>
		<repository>
		    <id>ProjectRepo</id>
		    <name>ProjectRepo</name>
		    <url>file:${project.basedir}/repo</url>
		</repository>
	</repositories>
</project>
